lib/tsp_ffi_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/tsp_ffi.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class TspFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  TspFfiBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  TspFfiBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// RoutingIndexManager functions
  RoutingIndexManagerHandle routing_index_manager_create(
    int num_nodes,
    int num_vehicles,
    int depot,
  ) {
    return _routing_index_manager_create(num_nodes, num_vehicles, depot);
  }

  late final _routing_index_manager_createPtr =
      _lookup<
        ffi.NativeFunction<
          RoutingIndexManagerHandle Function(ffi.Int, ffi.Int, ffi.Int)
        >
      >('routing_index_manager_create');
  late final _routing_index_manager_create = _routing_index_manager_createPtr
      .asFunction<RoutingIndexManagerHandle Function(int, int, int)>();

  void routing_index_manager_delete(RoutingIndexManagerHandle manager) {
    return _routing_index_manager_delete(manager);
  }

  late final _routing_index_manager_deletePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(RoutingIndexManagerHandle)>>(
        'routing_index_manager_delete',
      );
  late final _routing_index_manager_delete = _routing_index_manager_deletePtr
      .asFunction<void Function(RoutingIndexManagerHandle)>();

  int routing_index_manager_index_to_node(
    RoutingIndexManagerHandle manager,
    int index,
  ) {
    return _routing_index_manager_index_to_node(manager, index);
  }

  late final _routing_index_manager_index_to_nodePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(RoutingIndexManagerHandle, ffi.Int64)
        >
      >('routing_index_manager_index_to_node');
  late final _routing_index_manager_index_to_node =
      _routing_index_manager_index_to_nodePtr
          .asFunction<int Function(RoutingIndexManagerHandle, int)>();

  /// RoutingModel functions
  RoutingModelHandle routing_model_create(RoutingIndexManagerHandle manager) {
    return _routing_model_create(manager);
  }

  late final _routing_model_createPtr =
      _lookup<
        ffi.NativeFunction<
          RoutingModelHandle Function(RoutingIndexManagerHandle)
        >
      >('routing_model_create');
  late final _routing_model_create = _routing_model_createPtr
      .asFunction<RoutingModelHandle Function(RoutingIndexManagerHandle)>();

  void routing_model_delete(RoutingModelHandle model) {
    return _routing_model_delete(model);
  }

  late final _routing_model_deletePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(RoutingModelHandle)>>(
        'routing_model_delete',
      );
  late final _routing_model_delete = _routing_model_deletePtr
      .asFunction<void Function(RoutingModelHandle)>();

  int routing_model_register_transit_callback(
    RoutingModelHandle model,
    TransitCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _routing_model_register_transit_callback(model, callback, user_data);
  }

  late final _routing_model_register_transit_callbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            RoutingModelHandle,
            TransitCallback,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('routing_model_register_transit_callback');
  late final _routing_model_register_transit_callback =
      _routing_model_register_transit_callbackPtr
          .asFunction<
            int Function(
              RoutingModelHandle,
              TransitCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void routing_model_set_arc_cost_evaluator_of_all_vehicles(
    RoutingModelHandle model,
    int evaluator_index,
  ) {
    return _routing_model_set_arc_cost_evaluator_of_all_vehicles(
      model,
      evaluator_index,
    );
  }

  late final _routing_model_set_arc_cost_evaluator_of_all_vehiclesPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(RoutingModelHandle, ffi.Int)>
      >('routing_model_set_arc_cost_evaluator_of_all_vehicles');
  late final _routing_model_set_arc_cost_evaluator_of_all_vehicles =
      _routing_model_set_arc_cost_evaluator_of_all_vehiclesPtr
          .asFunction<void Function(RoutingModelHandle, int)>();

  AssignmentHandle routing_model_solve_with_parameters(
    RoutingModelHandle model,
    RoutingSearchParametersHandle parameters,
  ) {
    return _routing_model_solve_with_parameters(model, parameters);
  }

  late final _routing_model_solve_with_parametersPtr =
      _lookup<
        ffi.NativeFunction<
          AssignmentHandle Function(
            RoutingModelHandle,
            RoutingSearchParametersHandle,
          )
        >
      >('routing_model_solve_with_parameters');
  late final _routing_model_solve_with_parameters =
      _routing_model_solve_with_parametersPtr
          .asFunction<
            AssignmentHandle Function(
              RoutingModelHandle,
              RoutingSearchParametersHandle,
            )
          >();

  int routing_model_start(RoutingModelHandle model, int vehicle) {
    return _routing_model_start(model, vehicle);
  }

  late final _routing_model_startPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int64 Function(RoutingModelHandle, ffi.Int)>
      >('routing_model_start');
  late final _routing_model_start = _routing_model_startPtr
      .asFunction<int Function(RoutingModelHandle, int)>();

  int routing_model_is_end(RoutingModelHandle model, int index) {
    return _routing_model_is_end(model, index);
  }

  late final _routing_model_is_endPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(RoutingModelHandle, ffi.Int64)>
      >('routing_model_is_end');
  late final _routing_model_is_end = _routing_model_is_endPtr
      .asFunction<int Function(RoutingModelHandle, int)>();

  int routing_model_get_arc_cost_for_vehicle(
    RoutingModelHandle model,
    int from_index,
    int to_index,
    int vehicle,
  ) {
    return _routing_model_get_arc_cost_for_vehicle(
      model,
      from_index,
      to_index,
      vehicle,
    );
  }

  late final _routing_model_get_arc_cost_for_vehiclePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int64 Function(
            RoutingModelHandle,
            ffi.Int64,
            ffi.Int64,
            ffi.Int64,
          )
        >
      >('routing_model_get_arc_cost_for_vehicle');
  late final _routing_model_get_arc_cost_for_vehicle =
      _routing_model_get_arc_cost_for_vehiclePtr
          .asFunction<int Function(RoutingModelHandle, int, int, int)>();

  int routing_model_status(RoutingModelHandle model) {
    return _routing_model_status(model);
  }

  late final _routing_model_statusPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(RoutingModelHandle)>>(
        'routing_model_status',
      );
  late final _routing_model_status = _routing_model_statusPtr
      .asFunction<int Function(RoutingModelHandle)>();

  int routing_model_next_var(RoutingModelHandle model, int index) {
    return _routing_model_next_var(model, index);
  }

  late final _routing_model_next_varPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int64 Function(RoutingModelHandle, ffi.Int64)>
      >('routing_model_next_var');
  late final _routing_model_next_var = _routing_model_next_varPtr
      .asFunction<int Function(RoutingModelHandle, int)>();

  /// RoutingSearchParameters functions
  RoutingSearchParametersHandle routing_search_parameters_create_default() {
    return _routing_search_parameters_create_default();
  }

  late final _routing_search_parameters_create_defaultPtr =
      _lookup<ffi.NativeFunction<RoutingSearchParametersHandle Function()>>(
        'routing_search_parameters_create_default',
      );
  late final _routing_search_parameters_create_default =
      _routing_search_parameters_create_defaultPtr
          .asFunction<RoutingSearchParametersHandle Function()>();

  void routing_search_parameters_delete(
    RoutingSearchParametersHandle parameters,
  ) {
    return _routing_search_parameters_delete(parameters);
  }

  late final _routing_search_parameters_deletePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(RoutingSearchParametersHandle)>
      >('routing_search_parameters_delete');
  late final _routing_search_parameters_delete =
      _routing_search_parameters_deletePtr
          .asFunction<void Function(RoutingSearchParametersHandle)>();

  void routing_search_parameters_set_first_solution_strategy(
    RoutingSearchParametersHandle parameters,
    int strategy,
  ) {
    return _routing_search_parameters_set_first_solution_strategy(
      parameters,
      strategy,
    );
  }

  late final _routing_search_parameters_set_first_solution_strategyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(RoutingSearchParametersHandle, ffi.Int)
        >
      >('routing_search_parameters_set_first_solution_strategy');
  late final _routing_search_parameters_set_first_solution_strategy =
      _routing_search_parameters_set_first_solution_strategyPtr
          .asFunction<void Function(RoutingSearchParametersHandle, int)>();

  void routing_search_parameters_set_local_search_metaheuristic(
    RoutingSearchParametersHandle parameters,
    int metaheuristic,
  ) {
    return _routing_search_parameters_set_local_search_metaheuristic(
      parameters,
      metaheuristic,
    );
  }

  late final _routing_search_parameters_set_local_search_metaheuristicPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(RoutingSearchParametersHandle, ffi.Int)
        >
      >('routing_search_parameters_set_local_search_metaheuristic');
  late final _routing_search_parameters_set_local_search_metaheuristic =
      _routing_search_parameters_set_local_search_metaheuristicPtr
          .asFunction<void Function(RoutingSearchParametersHandle, int)>();

  void routing_search_parameters_set_time_limit_seconds(
    RoutingSearchParametersHandle parameters,
    int time_limit_seconds,
  ) {
    return _routing_search_parameters_set_time_limit_seconds(
      parameters,
      time_limit_seconds,
    );
  }

  late final _routing_search_parameters_set_time_limit_secondsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(RoutingSearchParametersHandle, ffi.Int64)
        >
      >('routing_search_parameters_set_time_limit_seconds');
  late final _routing_search_parameters_set_time_limit_seconds =
      _routing_search_parameters_set_time_limit_secondsPtr
          .asFunction<void Function(RoutingSearchParametersHandle, int)>();

  /// Assignment functions
  void assignment_delete(AssignmentHandle assignment) {
    return _assignment_delete(assignment);
  }

  late final _assignment_deletePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(AssignmentHandle)>>(
        'assignment_delete',
      );
  late final _assignment_delete = _assignment_deletePtr
      .asFunction<void Function(AssignmentHandle)>();

  int assignment_objective_value(AssignmentHandle assignment) {
    return _assignment_objective_value(assignment);
  }

  late final _assignment_objective_valuePtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(AssignmentHandle)>>(
        'assignment_objective_value',
      );
  late final _assignment_objective_value = _assignment_objective_valuePtr
      .asFunction<int Function(AssignmentHandle)>();

  /// Solve TSP with a distance matrix
  /// distance_matrix should be a flattened 2D array of size num_nodes * num_nodes
  /// time_limit_seconds: maximum time in seconds for the solver (0 = no limit)
  /// Returns a TSPSolution struct that contains all handles and the solution
  /// Caller must free the solution using tsp_solution_free()
  TspSolution tsp_solve_with_distance_matrix(
    ffi.Pointer<ffi.Int64> distance_matrix,
    int num_nodes,
    int num_vehicles,
    int depot,
    int first_solution_strategy,
    int local_search_metaheuristic,
    int time_limit_seconds,
  ) {
    return _tsp_solve_with_distance_matrix(
      distance_matrix,
      num_nodes,
      num_vehicles,
      depot,
      first_solution_strategy,
      local_search_metaheuristic,
      time_limit_seconds,
    );
  }

  late final _tsp_solve_with_distance_matrixPtr =
      _lookup<
        ffi.NativeFunction<
          TspSolution Function(
            ffi.Pointer<ffi.Int64>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int64,
          )
        >
      >('tsp_solve_with_distance_matrix');
  late final _tsp_solve_with_distance_matrix =
      _tsp_solve_with_distance_matrixPtr
          .asFunction<
            TspSolution Function(
              ffi.Pointer<ffi.Int64>,
              int,
              int,
              int,
              int,
              int,
              int,
            )
          >();

  /// Free all resources associated with a TSP solution
  void tsp_solution_free(ffi.Pointer<TspSolution> solution) {
    return _tsp_solution_free(solution);
  }

  late final _tsp_solution_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TspSolution>)>>(
        'tsp_solution_free',
      );
  late final _tsp_solution_free = _tsp_solution_freePtr
      .asFunction<void Function(ffi.Pointer<TspSolution>)>();

  /// Helper function to extract the route from a solution
  /// route should be pre-allocated array of size at least num_nodes + 1
  /// Returns the actual route length
  int tsp_solution_get_route(
    ffi.Pointer<TspSolution> solution,
    int vehicle,
    ffi.Pointer<ffi.Int> route,
    int max_route_length,
  ) {
    return _tsp_solution_get_route(solution, vehicle, route, max_route_length);
  }

  late final _tsp_solution_get_routePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<TspSolution>,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
            ffi.Int,
          )
        >
      >('tsp_solution_get_route');
  late final _tsp_solution_get_route = _tsp_solution_get_routePtr
      .asFunction<
        int Function(ffi.Pointer<TspSolution>, int, ffi.Pointer<ffi.Int>, int)
      >();
}

/// Opaque handles for C++ objects
typedef RoutingIndexManagerHandle = ffi.Pointer<ffi.Void>;
typedef RoutingModelHandle = ffi.Pointer<ffi.Void>;

/// Callback function type for transit evaluator
typedef TransitCallback =
    ffi.Pointer<ffi.NativeFunction<TransitCallbackFunction>>;
typedef TransitCallbackFunction =
    ffi.Int64 Function(
      ffi.Int64 from_index,
      ffi.Int64 to_index,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef DartTransitCallbackFunction =
    int Function(int from_index, int to_index, ffi.Pointer<ffi.Void> user_data);
typedef AssignmentHandle = ffi.Pointer<ffi.Void>;
typedef RoutingSearchParametersHandle = ffi.Pointer<ffi.Void>;

/// High-level convenience function for solving TSP with distance matrix
/// This combines all the steps: create manager, model, register callback, set parameters, and solve
final class TspSolution extends ffi.Struct {
  external AssignmentHandle solution;

  external RoutingIndexManagerHandle manager;

  external RoutingModelHandle model;

  external RoutingSearchParametersHandle parameters;

  @ffi.Int()
  external int status;
}

const int FIRST_SOLUTION_UNSET = 0;

const int FIRST_SOLUTION_AUTOMATIC = 15;

const int FIRST_SOLUTION_PATH_CHEAPEST_ARC = 3;

const int FIRST_SOLUTION_PATH_MOST_CONSTRAINED_ARC = 4;

const int FIRST_SOLUTION_EVALUATOR_STRATEGY = 5;

const int FIRST_SOLUTION_SAVINGS = 10;

const int FIRST_SOLUTION_SWEEP = 11;

const int FIRST_SOLUTION_CHRISTOFIDES = 13;

const int FIRST_SOLUTION_ALL_UNPERFORMED = 6;

const int FIRST_SOLUTION_BEST_INSERTION = 7;

const int FIRST_SOLUTION_PARALLEL_CHEAPEST_INSERTION = 8;

const int FIRST_SOLUTION_SEQUENTIAL_CHEAPEST_INSERTION = 14;

const int FIRST_SOLUTION_LOCAL_CHEAPEST_INSERTION = 9;

const int FIRST_SOLUTION_LOCAL_CHEAPEST_COST_INSERTION = 16;

const int FIRST_SOLUTION_GLOBAL_CHEAPEST_ARC = 1;

const int FIRST_SOLUTION_LOCAL_CHEAPEST_ARC = 2;

const int FIRST_SOLUTION_FIRST_UNBOUND_MIN_VALUE = 12;

const int ROUTING_NOT_SOLVED = 0;

const int ROUTING_SUCCESS = 1;

const int ROUTING_PARTIAL_SUCCESS_LOCAL_OPTIMUM_NOT_REACHED = 2;

const int ROUTING_FAIL = 3;

const int ROUTING_FAIL_TIMEOUT = 4;

const int ROUTING_INVALID = 5;

const int ROUTING_INFEASIBLE = 6;

const int ROUTING_OPTIMAL = 7;

const int LOCAL_SEARCH_METAHEURISTIC_UNSET = 0;

const int LOCAL_SEARCH_METAHEURISTIC_GREEDY_DESCENT = 1;

const int LOCAL_SEARCH_METAHEURISTIC_GUIDED_LOCAL_SEARCH = 2;

const int LOCAL_SEARCH_METAHEURISTIC_SIMULATED_ANNEALING = 3;

const int LOCAL_SEARCH_METAHEURISTIC_TABU_SEARCH = 4;

const int LOCAL_SEARCH_METAHEURISTIC_AUTOMATIC = 6;
